# Asteroid-Rodeo-Wrangler-eXtreme

./: README.md  config.status  configure  configure.ac
autom4te.cache/: output.0  traces.0
doc/: class.dia  class.dia~  names
include/: alleg_polygon.h  gfieldmap.h  object.h  point.h  ship_drawer.h  static_object.h
src/: alleg_polygon.cc  point.cc
